--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Nick's birthday 🎉</h1>
-            <img id="bff-img" src="images/nick.jpg">
+            <h1>Today is Moe's birthday 🎉</h1>
+            <img id="bff-img" src="images/poopie.jpg">
             <h2 id="bday-age">24 years old</h2>
             <h4 id="bday-date">01.11.2022</h4>
         </div>
@@ -35,7 +35,7 @@
         </div>
         
          <div class="gift-section">
-            <h2 class="gift-title">This one's for you, my friend 🥂</h2>
+            <h2 class="gift-title">This one's for you, my baby 🥂</h2>
             <div class="gift-img" id="gift-img-cheers"></div>
         </div>
         
